src/generators/snapshots/scrut__generators__generator__tests__create__cram__multiline_output.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test
  $ the command
  line 1
  line 2
  line 3 (no-eol)

